--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Arti Saraswat
-logo: /assets/img/logo.png
+title: <center>Arti Saraswat</center>
+logo: /assets/img/IMG-20220818-WA0121.jpeg
 description: GitHub portfolio
 show_downloads: true
 google_analytics:
